# swiftsim

./: .gitignore  .gitmodules  Makefile.am  configure.ac  myinstall.sh
examples/: Makefile.am  main.c  main_fof.c  parameter_example.yml  process_memalign.py  process_memuse.py
examples/Cooling/CoolingGrid/: Makefile.am  cooling_grid.c  plot_grid_results.py
examples/Cooling/CoolingRates/: cooling_rates.c
examples/CoolingHaloWithSpin/: cooling_halo.yml
examples/Cosmology/NeutrinoCosmo/: firebolt_settings.ini  neutrino_cosmo.yml  solve_linear_system.py
examples/Cosmology/NeutrinoCosmo/analyse/: CMakeLists.txt  CMakeLists_cosma.txt  analyse.cpp  analyse.h  calc_powerspec.cpp  calc_powerspec.h  config.h
examples/Cosmology/NeutrinoCosmo/analyse/input/: README.txt
examples/Cosmology/NeutrinoCosmo/analyse/interpolation_methods/: cloud_in_cell.cpp  triangular_cloud.cpp
examples/Cosmology/NeutrinoCosmo/icgen/: CMakeLists.txt  CMakeLists_cosma.txt  config.h  cosmo.h  create_grf.cpp  create_grf.h  field_io.h  icgen.cpp  icgen.h  infini_lpt.cpp  infini_lpt.h  read_transfer.cpp  read_transfer.h  sampler.cpp  sampler.h
examples/EAGLE_12/: eagle_12.yml
examples/EAGLE_ICs/EAGLE_12/: eagle_12.yml
examples/EAGLE_ICs/EAGLE_25/: eagle_25.yml
examples/EAGLE_ICs/EAGLE_50/: eagle_50.yml
examples/EAGLE_low_z/EAGLE_12/: eagle_12.yml
examples/EAGLE_low_z/EAGLE_25/: eagle_25.yml
examples/EAGLE_low_z/EAGLE_50/: eagle_50.yml
examples/EAGLE_low_z/EAGLE_6/: eagle_6.yml
examples/GEAR/AgoraDisk/: agora_disk.yml  getSolution.sh  plotSolution.py  run.sh
examples/GEAR/DwarfGalaxy/: dwarf_galaxy.yml  run.sh
examples/GEAR/ZoomIn/: run.sh  zoom_in.yml
examples/IsolatedGalaxy/IsolatedGalaxy_feedback/: isolated_galaxy.yml  run.sh
examples/SmallCosmoVolume/SmallCosmoVolume_DM/: small_cosmo_volume_dm.yml
examples/SodShock_1D/convergence/: README.md  gadget2_config.sh  gizmo_config.sh  helper.py  hopkins_config.sh  make_convergence_plot.py  run_convergence.sh  setup_convergence.sh  sodshock.py
examples/Stellar_Disc/: makeIC.py  stellar_disc.yml
examples/SubgridTests/StellarEvolution/: run.sh  stellar_evolution.yml
examples/SupernovaeFeedback/: SN_feedback.yml  makeIC.py  plotSolution.py  run.sh
examples/ZeldovichPancake_3D/: zeldovichPancake.yml
examples/external_gravity_test/: external_gravity_test.yml  makeIC.py  plot_orbits.py  test_energy_conservation.py
examples/nIFTyCluster/Baryonic/: plotSolution.py
examples/self_gravity_test/: makeIC.py  makeIC_DM.py  makeIC_stars.py  plot_orbit.py  run.sh  self_gravity_test.yml  test_energy_conservation.py
examples/self_gravity_testing/keplerian_orbit/: makeIC.py  make_error_plot.py  point_mass_self_grav_mle_0.yml  point_mass_self_grav_mle_1.yml  point_mass_self_grav_mle_2.yml  point_mass_self_grav_mle_3.yml  point_mass_self_grav_mle_4.yml  point_mass_self_grav_mle_5.yml  point_mass_self_grav_mle_6.yml  run.sh  scipy_integrator.py  write_E_L_output.py  write_position_output.py
examples/self_gravity_testing/particle_line/: energy_plot.py  eta_test_plot.py  makeIC.py  make_error_plot.py  make_plots.py  particle_line.yml  particle_line_theta_0.yml  particle_line_theta_0p7.yml  run.sh  (+5 more)
logger/: Makefile.am  logger_header.c  logger_header.h  logger_index.c  logger_index.h  logger_loader_io.c  logger_loader_io.h  logger_logfile.c  logger_logfile.h  logger_particle.c  logger_particle.h  logger_python_wrapper.c  logger_reader.c  logger_reader.h  logger_time.c  logger_time.h  logger_tools.c  radix_sort.c  radix_sort.h
logger/examples/: reader_example.py  write_snapshot.py
logger/python/: reader_example.py
logger/tests/: Makefile.am  generate_log.h  testLogfileHeader.c  testLogfileReader.c  testRadixSort.c  testSort.c  testVR.c  testVR.yml
m4/: swift_add_chemistry.m4  swift_add_cooling.m4  swift_add_dimension.m4  swift_add_equation_of_state.m4  swift_add_gravity.m4  swift_add_hydro.m4  swift_add_kernel.m4  swift_add_libraries.m4  swift_add_riemann.m4  swift_add_special_flags.m4  swift_add_stars.m4  swift_add_subgrid_models.m4  swift_add_tracer.m4
src/: Makefile.am  active.h  align.h  atomic.h  cache.h  cell.c  cell.h  cell_drift.c  cell_grav.h  collectgroup.c  collectgroup.h  common_io.c  common_io.h  common_io_fields.c  cosmology.c  cosmology.h  cosmology_default.h  debug.c  debug.h  dimension.h  distributed_io.c  drift.h  dump.c  dump.h  engine.c  engine.h  engine_collect_end_of_step.c  engine_config.c  engine_drift.c  engine_maketasks.c  engine_marktasks.c  engine_unskip.c  error.h  feedback.h  feedback_properties.h  fof.c  gravity.c  gravity_cache.h  gravity_properties.c  gravity_properties.h  (+95 more)
src/boltzmann/: neutrino.c  neutrino.h  powerspec.c  powerspec.h
src/neutrino/: class_interface.c  class_interface.h  cosmology.c  cosmology.h  delta_f.h  fermi_dirac.c  fermi_dirac.h  fermi_dirac_sampler.c  fermi_dirac_sampler.h  firebolt_interface.c  firebolt_interface.h  neutrino.h  neutrino_properties.h  phase_space.c  phase_space.h  relativity.h  renderer.c  renderer.h
src/riemann/: riemann_exact.h
tests/: Makefile.am  test27cells.c  testActivePair.c  testCosmology.c  testFFT.c  testLogger.c  testNeutrinoCosmology.c  testNeutrinoFermiDirac.c  testParser.c  testParserInput.yaml  testPeriodicBC.c  testReading.c  testSelectOutput.c  testSort.c
tests/vector_unit_tests/: basetest.c  sve_test_add.c  sve_test_fma.c  sve_test_fnma.c  sve_test_load.c  sve_test_mask_add.c  sve_test_mask_sub.c  sve_test_setzero.c  sve_test_sub.c  test.sh  test_add.c  test_and.c  test_and_mask.c  test_blend.c  test_cmp_gt.c  test_cmp_gte.c  test_cmp_lt.c  test_cmp_lte.c  test_cmp_result.c  test_combine_masks.c  test_create_mask.c  test_dbl_fmax.c  test_dbl_fmin.c  test_dbl_ftoi.c  test_dbl_load.c  test_dbl_rcp.c  test_dbl_rsqrt.c  test_dbl_set.c  test_dbl_set1.c  test_dbl_sqrt.c  test_dbl_tofloat.c  test_div.c  test_fabs.c  test_fill_vec.c  test_floor.c  test_fma.c  test_fmax.c  test_fmin.c  test_fnma.c  test_form_packed_mask.c  (+29 more)
theory/Cosmology/: bibliography.bib  flrw.tex  neutrinos.tex
tools/: analyse_runtime.py  plot_task_dependencies.py
(+292 files in other folders)
